x/webhook/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kne-assembly-webhook
  name: kne-assembly-webhook
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30100
  selector:
    app: kne-assembly-webhook
