x/webhook/manifests/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "kne-assembly-webhook.dsdn.org"
webhooks:
  - name: "kne-assembly-webhook.dsdn.org"
    namespaceSelector:
      matchLabels:
        kne-topology: "true"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: kne-assembly-webhook
        path: /mutate-objects
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVYk82ZzBlUE1j
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
